--- a/src/Chat/Chat.csproj
+++ b/src/Chat/Chat.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssemblyName>Chat</AssemblyName>
     <PackageId>Chat</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
 
     <PackageReference Include="ServiceStack.Text" Version="5.*" />
     <PackageReference Include="ServiceStack.Interfaces" Version="5.*" />
