--- a/src/Chat/Chat.csproj
+++ b/src/Chat/Chat.csproj
@@ -1,14 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AssemblyName>Chat</AssemblyName>
     <PackageId>Chat</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.*" />
-
     <PackageReference Include="ServiceStack.Text" Version="5.*" />
     <PackageReference Include="ServiceStack.Interfaces" Version="5.*" />
     <PackageReference Include="ServiceStack.Client" Version="5.*" />
@@ -16,7 +14,6 @@
     <PackageReference Include="ServiceStack" Version="5.*" />
     <PackageReference Include="ServiceStack.Mvc" Version="5.*" />
     <PackageReference Include="ServiceStack.Redis" Version="5.*" />
-
   </ItemGroup>
 
 </Project>
