try install .NET Core 3.0 via snaps

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: csharp
 os: linux
 dist: trusty
 sudo: required
-dotnet: 3.0.0
 mono: none
 env: DOTNETCORE=1
 services:
@@ -11,7 +10,12 @@ addons:
   apt:
     packages:
       - docker-ce
+  snaps:
+  - name: dotnet-sdk
+    classic: true
 script:
+  - sudo snap alias dotnet-sdk.dotnet dotnet
+  - dotnet --version
   - chmod +x ./deploy-envs.sh
   - chmod +x ./scripts/build.sh
   - chmod +x ./scripts/deploy.sh
