--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -1,19 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>Chat</AssemblyName>
-    <PackageId>Chat</PackageId>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+    <PublishProfile>DefaultContainer</PublishProfile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ServiceStack.Text" Version="6.*" />
-    <PackageReference Include="ServiceStack.Interfaces" Version="6.*" />
-    <PackageReference Include="ServiceStack.Client" Version="6.*" />
-    <PackageReference Include="ServiceStack.Common" Version="6.*" />
-    <PackageReference Include="ServiceStack" Version="6.*" />
-    <PackageReference Include="ServiceStack.Mvc" Version="6.*" />
-    <PackageReference Include="ServiceStack.Redis" Version="6.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.*" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.*" />
+    <PackageReference Include="ServiceStack.Text" Version="8.*" />
+    <PackageReference Include="ServiceStack.Interfaces" Version="8.*" />
+    <PackageReference Include="ServiceStack.Client" Version="8.*" />
+    <PackageReference Include="ServiceStack.Common" Version="8.*" />
+    <PackageReference Include="ServiceStack" Version="8.*" />
+    <PackageReference Include="ServiceStack.Mvc" Version="8.*" />
+    <PackageReference Include="ServiceStack.Redis" Version="8.*" />
   </ItemGroup>
 
 </Project>
