--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -21,7 +21,9 @@ servers:
 # in Cloudflare's SSL/TLS setting to "Full" to enable end-to-end encryption.
 proxy:
   ssl: true
-  host: chat.netcore.io
+  hosts: 
+    - chat.netcore.io
+    - chat.web-app.io
   # kamal-proxy connects to your container over port 80, use `app_port` to specify a different port.
   app_port: 8080
 
